style.css
/* ... */
@media (max-width: 700px) {
  .btn {
    padding: 16px 48px;
  }
}

@media (max-width: 485px) {
  .btn {
    font-size: 1.2rem;
    padding: 14px 38px;
  }
}

.btn-cta {
  color: var(--bg-color-primary);
  background-color: var(--important);
}

body.dark .btn-cta:hover,
body.dark .btn-cta:focus {
  box-shadow: #ffffff40 0 0 0 var(--gutter-nano);
}

body.light .btn-cta:hover,
body.light .btn-cta:focus {
  box-shadow: #07070733 0 0 0 var(--gutter-nano);
}

.btn-secondary {
  border: 1px solid var(--border-dark);
  color: var(--important);
}

.btn-secondary:hover,
.btn-secondary:focus {
  border-color: var(--important);
}

.link {
  display: inline-block;
  font-weight: 600;
  font-size: var(--text-small);
  padding: var(--gutter-nano) 0;
  text-decoration: none;
  color: var(--important);
  position: relative;
}

.link::after,
.link::before {
  content: "";
  width: 100%;
  height: 1px;
  margin-block-start: var(--gutter-nano);
  position: absolute;
  bottom: -1px;
  left: 0;
  transition: 300ms;
}

body.dark .link::before {
  background-color: #d3d3d357;
}

body.dark .link::after {
  background-color: white;
}

body.light .link::before {
  background-color: lightgray;
}

body.light .link::after {
  background-color: black;
}

.link::after {
  background-color: white;
  transform-origin: left;
  transform: scaleX(0);
}

.link:hover::after,
.link:focus::after {
  transform: scaleX(1);
}

/* --------------------------------- */
/* ----- Layout -----*/
/* --------------------------------- */

section:not(:first-child) {
  padding-block-start: var(--gutter-huge);
}

section:first-child {
  padding-block-start: 7rem;
}

@media (max-width: 885px) {
  :root {
    --gutter-huge: 8rem;
    --gutter-x-large: 4rem;
  }
}

main {
  border-top: 1px solid var(--border);
  border-top-left-radius: var(--radius);
  border-top-right-radius: var(--radius);
  background-color: var(--bg-color-primary);
  transform: translateY(calc(-1 * var(--radius)));
}

@media (max-width: 1185px) {
  :root {
    --radius: 45px;
  }
}

/* --------------------------------- */
/* ----- Menu Button -----*/
/* --------------------------------- */

.menu-btn-container {
  position: fixed;
  width: 100%;
  top: var(--gutter-x-small);
  left: 0;
  z-index: 4;
}

.menu-btn {
  display: block;
  margin-inline-start: auto;
  border: 1px solid var(--border-dark);
  inline-size: 132px;
  padding-block: var(--gutter-nano);
  border-radius: var(--gutter-large);
  text-decoration: none;
  background-color: var(--bg-color-secondary);
  color: var(--important);
  cursor: pointer;
}

.menu-btn,
.nav-items a {
  font-stretch: 125%;
  font-weight: 900;
}

/* --------------------------------- */
/* ----- Navigation -----*/
/* --------------------------------- */

.nav {
  min-block-size: 100vh;
  position: fixed;
  width: 100%;
  background-color: #000000;
  /* background-image: var(--gradient-brand);
  transition: 450ms var(--easing); */
  z-index: 3; 
}

.nav-items {
  position: absolute;
  top: 50%;
  left: 15%;
  transform: translateY(-50%) translateX(-15%);
  list-style-type: none;
}

.nav-item:not(:last-child) {
  margin-block-end: var(--gutter-x-small);
}

.nav-item a {
  display: inline-block;
  font-size: var(--h2);
  text-decoration: none;
  color: #fff;
}

.nav-item a::after {
  content: "";
  display: block;
  block-size: var(--gutter-nano);
  width: 100%;
  transform: scale(0);
  transform-origin: left;
  background-color: white;
  transition: transform 250ms var(--easing);
}

.nav-item a:hover::after,
.nav-item a:focus::after {
  transform: scale(1);
}

/* --------------------------------- */
/* ----- Header -----*/
/* --------------------------------- */

.header {
  min-block-size: calc(100vh + var(--radius));
  background-attachment: fixed;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
}

body.dark .header {
  background-image: linear-gradient(#0000008b, #000000e6),
    url("./assets/images/new-image.jpg") !important ;
}

body.light .header {
  background-image: linear-gradient(#ffffffa2, #ffffffe6),
    url("assets/images/hero-bg-light.webp");
}

.header-textbox {
  text-align: center;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.h1 span {
  display: inline;
  text-align: center;
}

.header-text {
  font-size: var(--text-small);
  text-align: center;
  font-weight: 400;
  margin-block-start: var(--gutter-micro);
  margin-block-end: var(--gutter-medium);
}

@media (min-width: 1600px) {
  .header-textbox {
    left: 0;
    text-align: center;
    padding-inline: 2.0rem;
  }
  
}

@media (max-width: 845px) {
  .header-textbox {
    left: 0;
    text-align: center;
    padding-inline: 2.0rem;
  }

  .header-btns {
    flex-direction: column;
    width: 80%;
  }
}

.header-btns {
  display: inline-flex;
  gap: var(--gutter-x-small);
}

@media (max-width: 400px) {
  .header-textbox {
    left: 0;
    text-align: center;
    padding-inline: 0.6rem;
  }
  .header-btns {
    flex-direction: column;
    width: 80%;
  }
}

/* --------------------------------- */
/* ----- Clients -----*/
/* --------------------------------- */

.logos {
  display: flex;
  justify-content: space-around;
  align-items: flex-start;
  padding-block-start: var(--gutter-x-large);
}

@media (max-width: 885px) {
  .logos {
    padding-block-start: calc(
      var(--gutter-x-large) + var(--gutter-x-large) - 2rem
    );
  }
}

.logo-group {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
}

.logo {
  position: absolute;
  top: 0;
  max-block-size: 60px;
  max-inline-size: 150px;
  transition: all 2.4s cubic-bezier(0.25, 1, 0.5, 1);
}

@media (max-width: 845px) {
  .logo {
    max-inline-size: 100px;
  }

  .logo-group:last-child {
    display: none;
  }
}

@media (max-width: 400px) {
  .logo {
    max-inline-size: 85px;
  }
}

.logo.hide {
  opacity: 0;
}
/* ... */

